--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "katex": "^0.16.25",
+    "mathjs": "^15.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
