--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,8 @@
     "katex": "^0.16.25",
     "mathjs": "^15.1.0",
     "next": "16.0.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-katex": "^3.1.0"
