--- a/Webservice/package.json
+++ b/Webservice/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "katex": "^0.16.25",
     "mathjs": "^15.1.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "19.2.0",
