--- a/Webservice/package.json
+++ b/Webservice/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "src",
-  "version": "0.1.0",
+  "name": "package.json",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "katex": "^0.16.25",
+    "@tailwindcss/vite": "^4.1.18",
+    "katex": "^0.16.27",
     "mathjs": "^15.1.0",
-    "next": "^16.0.7",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-katex": "^3.1.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-katex": "^3.1.0",
+    "react-router-dom": "^7.10.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
   }
 }
