--- a/.github/workflows/jsdoc.yml
+++ b/.github/workflows/jsdoc.yml
@@ -20,6 +20,7 @@ jobs:
           config_file: conf.json
           template: minami
           front_page: README.md
+          recurse: true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
